src/test/ui/issues/issue-12796.stderr
error[E0401]: can't use type parameters from outer function
  --> $DIR/issue-12796.rs:13:22
   |
LL |         fn inner(_: &Self) {
   |                      ^^^^
   |                      |
   |                      use of type variable from outer function
   |                      use a materialized type here instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
